--- a/index.html
+++ b/index.html
@@ -73,8 +73,121 @@
         let content = document.getElementById('content');
         if (section === 'home') {
             content.innerHTML = `
-                <h2>Welcome!</h2>
-                <p>Hello! I am a web developer passionate about building clean and responsive websites.</p>
+               <style>
+    /* Reset */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: "Poppins", sans-serif;
+      background: linear-gradient(135deg, #fdfbfb 0%, #ebedee 100%);
+      color: #333;
+      line-height: 1.6;
+    }
+
+    header {
+      background: #fff;
+      padding: 20px 50px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.05);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: sticky;
+      top: 0;
+    }
+
+    header h1 {
+      font-size: 1.5rem;
+      color: #444;
+    }
+nav{
+background-color:white;
+}
+    nav a {
+      margin-left: 20px;
+      text-decoration: none;
+      color:black;
+      background-color:white;
+      font-weight: 500;
+      transition: color 0.3s ease;
+    }
+
+    nav a:hover {
+      color: #007bff;
+    }
+
+    .hero {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      min-height: 80vh;
+      text-align: center;
+      padding: 0 20px;
+    }
+
+    .hero h2 {
+      font-size: 2.5rem;
+      margin-bottom: 15px;
+      color: #222;
+    }
+
+    .hero p {
+      max-width: 600px;
+      font-size: 1.1rem;
+      color: #555;
+      
+      margin-bottom: 25px;
+    }
+
+    .btn {
+      padding: 12px 25px;
+      background: #007bff;
+      color: #fff;
+      border-radius: 30px;
+      text-decoration: none;
+      transition: background 0.3s ease;
+    }
+
+    .btn:hover {
+      background: #0056b3;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9rem;
+      background: #f5f5f5;
+      color: #666;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Header -->
+  <header>
+    <h1>My Portfolio</h1>
+   
+  </header>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <h2>Hello, I'm Kathiravan v</h2>
+    <p>
+      I’m a passionate frontend developer who loves creating modern, responsive, and user-friendly websites.
+      My goal is to craft clean code and intuitive designs that provide seamless digital experiences.
+      Explore my portfolio to see my latest projects and skills in action.
+    </p>
+    <a href="#projects" class="btn">View My Work</a>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    © 2025 My Portfolio | Designed with love
+  </footer>
             `;
         } else if (section === 'about') {
             content.innerHTML = `
